--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
       </div>
       <button class="header__loginButton">Войти</button>
     </header>
-    <main>
-      <!-- <img class='lead__img' src="./images/mosque.png" alt="mosque"> -->
+    <main class="main">
+      
       <section class="lead">
         <div class="lead__info root__section">
           <div class="lead__headers">
+            <img class='lead__img' src="./images/mosque.png" alt="mosque">
             <h1 class="lead__header">
               для тех, кто стремится жить<span class="lead__highlight"> экологически осознанно </span>и внести свой вклад в устойчивое развитие города.
             </h1>
@@ -46,11 +47,11 @@
             <p class="lead__subtitle">узнавайте первыми <span class="lead__highlight" >о предстоящих событиях</span> и участвуйте в них.</p>
           </div>
         </div>
-        <!-- <div class="lead__socials">
+        <div class="lead__socials">
           <p class="lead__contactsSubtitle">Контактная информация: для сотрудничества - ecokazan@gmail.com, мы в соц.сетях -</p>
-          <img src="./images/socials_vk.svg" alt="vk_icon">
-          <img src="./images/socials_tg.svg" alt="tg_icon">
-        </div> -->
+          <img class="vk" src="./images/socials_vk.svg" alt="vk_icon">
+          <img class="tg" src="./images/socials_tg.svg" alt="tg_icon">
+        </div>
       </section>
     </main>
   </div>
