переверстан блок форум

--- a/index.html
+++ b/index.html
@@ -96,14 +96,86 @@
         </div>
       </section>
       <section id='forum' class="forum root__section">
-        <img class="forum__image" src="./images/текст1new.png" alt="chat dialog">
-        <img class="forum__image" src="./images/текст2.png" alt="chat dialog">
-        <img class="forum__image" src="./images/текст3.png" alt="chat dialog">
+        <div class="forum__main-container">
+          <div class="forum__info-container">
+            <p class="forum__title">Экологический праздник "Зеленая система" пройдет 14 октября с 12:00 до 19:00 часов в рамках фестиваля КультТорг</p>
+            <button class="forum__button"><a class="button__link" href="https://www.w3schools.com">Подробнее</a></button>
+          </div>
+          <div class="forum__dialog-container">
+            <div class="forum__dialog">
+              <div class="forum__person-dialog">
+                <img src="./images/person1.png"/>
+                <img src="./images/bubble2.png"/>
+              </div>
+              <div class="forum__person-dialog">
+                <img src="./images/person2.png"/>
+                <img src="./images/bubble1.png"/>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="forum__main-container">
+          <div class="forum__info-container">
+            <p class="forum__title">Сотрудники Госкомитета РТ по биоресурсам продолжают бороться против туристов за цвет Голубых озер</p>
+            <button class="forum__button"><a class="button__link" href="https://www.w3schools.com">Подробнее</a></button>
+          </div>
+          <div class="forum__dialog-container">
+            <div class="forum__dialog">
+              <div class="forum__person-dialog">
+                <img src="./images/person1.png"/>
+                <img src="./images/bubble2.png"/>
+              </div>
+              <div class="forum__person-dialog">
+                <img src="./images/person2.png"/>
+                <img src="./images/bubble1.png"/>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="forum__main-container">
+          <div class="forum__info-container">
+            <p class="forum__title">«Чистый воздух»: благая цель или почва для активизма?</p>
+            <button class="forum__button"><a class="button__link" href="https://www.w3schools.com">Подробнее</a></button>
+          </div>
+          <div class="forum__dialog-container">
+            <div class="forum__dialog">
+              <div class="forum__person-dialog">
+                <img src="./images/person1.png"/>
+                <img src="./images/bubble2.png"/>
+              </div>
+              <div class="forum__person-dialog">
+                <img src="./images/person2.png"/>
+                <img src="./images/bubble1.png"/>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="stores root__section" id="stores">
-        <img class="forum__image" src="./images/магазин1.png" alt="chat dialog">
-        <img class="forum__image" src="./images/магазин2.png" alt="chat dialog">
-        <img class="forum__image" src="./images/магазин3.png" alt="chat dialog">
+        <div class="stores__main-container">
+          <div class="stores__title-logo">
+            <p class="stores__title">Low Waste</p>
+            <img src="./images/иконка1.png" class="stores__img">
+          </div>
+          <div class="stores__info">
+            <div class="stores__description">
+              <div class="stores__main-description">
+                <p>Описание: В Low Waste собраны максимально безопасные товары от местных производителей - для дома, быта, красоты и здоровья, этичная косметика и многоразовые альтернативы привычным одноразовым вещам. В магазине можно взять бытовые средства на розлив.</p>
+              </div>
+              <div class="stores__socials">
+                <div></div>
+              </div>
+            </div>
+            <div class="stores__notes">
+              <div class="stores__notes-main-text">
+                <p>Адрес: Бурхана Шахиди,9а (секонд-стор Svalka), второй этаж. График работы: ежедневно с 10:00 до 22:00</p>
+              </div>
+              <div class="stores__rating">
+                <div></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer lead__socials">
