feature: stores block

--- a/index.html
+++ b/index.html
@@ -158,25 +158,65 @@
             <img src="./images/иконка1.png" class="stores__img">
           </div>
           <div class="stores__info">
-            <div class="stores__description">
-              <div class="stores__main-description">
-                <p>Описание: В Low Waste собраны максимально безопасные товары от местных производителей - для дома, быта, красоты и здоровья, этичная косметика и многоразовые альтернативы привычным одноразовым вещам. В магазине можно взять бытовые средства на розлив.</p>
-              </div>
-              <div class="stores__socials">
-                <div></div>
-              </div>
+            <p class="stores_first-title">Описание: В Low Waste собраны максимально безопасные товары от местных производителей - для дома, быта, красоты и здоровья, этичная косметика и многоразовые альтернативы привычным одноразовым вещам. В магазине можно взять бытовые средства на розлив.</p>
+            <p class="second_first-title">Адрес: Бурхана Шахиди,9а (секонд-стор Svalka), второй этаж. График работы: ежедневно с 10:00 до 22:00</p>
+          </div>
+          <div class="stores__additional">
+            <div class="stores__socials">
+                <img src="./images/socials_tg.svg">
+                <img src="./images/socials_vk.svg">
             </div>
-            <div class="stores__notes">
-              <div class="stores__notes-main-text">
-                <p>Адрес: Бурхана Шахиди,9а (секонд-стор Svalka), второй этаж. График работы: ежедневно с 10:00 до 22:00</p>
-              </div>
-              <div class="stores__rating">
-                <div></div>
-              </div>
+            <div class="stores__rating">
+                <img class="heart" src="./images/heart.png">
+                <p>Рейтинг: </p>
+                <img class="stars" src="./images/Rating.png">
+            </div>
+          </div>
+        </div>
+        <div class="stores__main-container">
+          <div class="stores__title-logo">
+            <p class="stores__title">Low Waste</p>
+            <img src="./images/иконка1.png" class="stores__img">
+          </div>
+          <div class="stores__info">
+            <p class="stores_first-title">Описание: В эколавке можно купить продукты для здорового питания, натуральную косметику, бытовую нехимию, лечебную продукцию и средства для дома.</p>
+            <p class="second_first-title">Адрес: - Проспект Победы, д. 21, торговые ряды в метро "Проспект победы", -Петербургская, 1, торговые ряды в метро "пл. Тукая", -Николая Ершова, 1в, -Гвардейская, 53 к11, 11А. График работы: ежедневно с 08:00 до 21:00</p>
+          </div>
+          <div class="stores__additional">
+            <div class="stores__socials">
+                <img src="./images/socials_tg.svg">
+                <img src="./images/socials_vk.svg">
+            </div>
+            <div class="stores__rating">
+                <img class="heart" src="./images/heart.png">
+                <p>Рейтинг: </p>
+                <img class="stars" src="./images/Rating.png">
+            </div>
+          </div>
+        </div>
+        <div class="stores__main-container">
+          <div class="stores__title-logo">
+            <p class="stores__title">Low Waste</p>
+            <img src="./images/иконка1.png" class="stores__img">
+          </div>
+          <div class="stores__info">
+            <p class="stores_first-title">Описание: В эколавке можно купить продукты для здорового питания, натуральную косметику, бытовую нехимию, лечебную продукцию и средства для дома.</p>
+            <p class="second_first-title">Адрес: - Проспект Победы, д. 21, торговые ряды в метро "Проспект победы", -Петербургская, 1, торговые ряды в метро "пл. Тукая", -Николая Ершова, 1в, -Гвардейская, 53 к11, 11А. График работы: ежедневно с 08:00 до 21:00</p>
+          </div>
+          <div class="stores__additional">
+            <div class="stores__socials">
+                <img src="./images/socials_tg.svg">
+                <img src="./images/socials_vk.svg">
+            </div>
+            <div class="stores__rating">
+                <img class="heart" src="./images/heart.png">
+                <p>Рейтинг: </p>
+                <img class="stars" src="./images/Rating.png">
             </div>
           </div>
         </div>
       </section>
+
     </main>
     <footer class="footer lead__socials">
       <p class="lead__contactsSubtitle">Контактная информация: для сотрудничества - ecokazan@gmail.com, мы в соц.сетях -</p>
